# My_Ray_Tracing

./: CMakeLists.txt  README.md
include/: camera.h  shader.h
shaders/: raytrace.frag  raytrace.vert
src/: glad.c  main.cpp  shader.cpp
